Testing region repository

--- a/BlueWarriors.Tests/BlueWarriors.Tests.csproj
+++ b/BlueWarriors.Tests/BlueWarriors.Tests.csproj
@@ -4,6 +4,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
+    <PackageReference Include="Moq" Version="4.7.99" />
     <PackageReference Include="System.Data.SqlClient" Version="4.3.1" />
     <PackageReference Include="xunit" Version="2.2.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
@@ -11,5 +12,6 @@
   <ItemGroup>
     <ProjectReference Include="..\BlueWarriors.Api\BlueWarriors.Api.csproj" />
     <ProjectReference Include="..\BlueWarriors.Services\BlueWarriors.Services.csproj" />
+    <ProjectReference Include="..\BlueWarriors.Mvc\BlueWarriors.Mvc.csproj" />
   </ItemGroup>
 </Project>
