--- a/BlueWarriors.Mvc/BlueWarriors.Mvc.csproj
+++ b/BlueWarriors.Mvc/BlueWarriors.Mvc.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="1.1.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="1.1.0" />
+    <PackageReference Include="Neleus.DependencyInjection.Extensions" Version="1.0.0" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.4.1" />
     <PackageReference Include="System.Data.SqlClient" Version="4.3.1" />
   </ItemGroup>
